# vocodex-server

./: pyproject.toml  requirements.txt  vercel.json
server/: README.md  analyze_lyrics.py  database.py  music_recommendation.py  requirements.txt  server.py  textEmotion.py  vocodex-72355-firebase-adminsdk-s60ug-abc1fa30aa.json
server/training/: experiment 2.ipynb  experiment.ipynb  model.pkl  trainer.py
