[tool.poetry]
name = "vocodex-server"
version = "0.1.0"
description = ""
authors = ["Austin A. <prodbyskynse@gmail.com>"]
readme = "README.md"
packages = [{include = "vocodex_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
